--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
   },
   "extends": ["next/core-web-vitals", "plugin:jest/recommended"],
   "rules": {
+    "react/no-unescaped-entities": "off",
     "import/no-anonymous-default-export": [
       "error",
       {
